--- a/example_form.html
+++ b/example_form.html
@@ -16,7 +16,7 @@
             box-sizing: border-box;
         }
     </style>
-   <form action="https://pearlsanitary.com/mail.php" method="post" style="color: white;">
+   <form action="mail.php" method="post" style="color: white;">
         Name: <input type="text" name="name" required><br>
         <br>
         Email: <input type="email" name="email" required><br><br>
